--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     //Postgres Driver
-    runtimeOnly 'org.postgresql:postgresql:42.2.8.jre7'
+    runtimeOnly 'org.postgresql:postgresql:42.2.5'
     
     //Spring dependencies
     compile("org.springframework:spring-context:5.0.0.RELEASE")
@@ -59,4 +59,10 @@ dependencies {
     
     //theymeleaf for template
     compile ("org.thymeleaf:thymeleaf:3.0.11.RELEASE")
+    compile ("org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE")
+    
+    //The MyBatis SQL mapper framework makes it easier to use a relational database with object-oriented applications. 
+    //MyBatis couples objects with stored procedures or SQL statements using a XML descriptor or annotations. 
+    //Simplicity is the biggest advantage of the MyBatis data mapper over object relational mapping tools.
+    compile ("org.mybatis:mybatis:3.4.6")
 }
