--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     compile("org.springframework:spring-context:5.0.0.RELEASE")
     compile("org.springframework:spring-webmvc:5.0.0.RELEASE")
     
-    //Servlet dependencies    
+    //jstl tag library support
     compile ("javax.servlet:javax.servlet-api:3.0.1")
     compile ("javax.servlet:jstl:1.2")
     compile ("javax.servlet.jsp:jsp-api:2.1")
@@ -61,8 +61,15 @@ dependencies {
     compile ("org.thymeleaf:thymeleaf:3.0.11.RELEASE")
     compile ("org.thymeleaf:thymeleaf-spring5:3.0.11.RELEASE")
     
+    //**Spring myBatis integration**   
     //The MyBatis SQL mapper framework makes it easier to use a relational database with object-oriented applications. 
     //MyBatis couples objects with stored procedures or SQL statements using a XML descriptor or annotations. 
     //Simplicity is the biggest advantage of the MyBatis data mapper over object relational mapping tools.
     compile ("org.mybatis:mybatis:3.4.6")
+    compile ("org.mybatis:mybatis-spring:1.3.2")
+    
+    //**C3P0 support**
+    //c3p0 is an easy-to-use library for augmenting traditional (DriverManager-based) JDBC drivers with JNDI-bindable DataSources,
+    //including DataSources that implement Connection and Statement Pooling, as described by the jdbc3 spec and jdbc2 std extension.
+    compile ("c3p0:c3p0:0.9.1.2")
 }
