configure ckEditor in web.xml -version1

--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ repositories {
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
     mavenCentral()
+    maven {
+        url = 'https://maven.cksource.com/'
+    }
 }
 
 dependencies {
@@ -76,9 +79,12 @@ dependencies {
     //Spring JDBC
 	compile ("org.springframework:spring-jdbc:5.2.1.RELEASE")
 	
-	//CKEditor
-	compile ("com.cksource:ckfinder3:3.5.1")
-	
 	//
 	compile ("org.hibernate:hibernate-validator:6.1.0.Final")
+	
+	// https://mvnrepository.com/artifact/com.ckeditor/ckeditor-java-core
+	//Dependency for ckEditor
+	//compile ("com.ckeditor:ckeditor-java-core:3.5.3")
+	compile ("com.cksource:ckfinder3:3.5.1")
+	
 }
