--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,18 @@
         <param-value>/WEB-INF/appconfig-root.xml</param-value>
     </context-param>
 
+	<!-- web.xml -->
+	<servlet>
+	    <servlet-name>CKFinder</servlet-name>
+	    <servlet-class>com.cksource.ckfinder.servlet.CKFinderServlet</servlet-class>
+	    <multipart-config>
+	        <location>/tmp</location>
+	        <max-file-size>5242880</max-file-size><!--5MB-->
+	        <max-request-size>20971520</max-request-size><!--20MB-->
+	        <file-size-threshold>0</file-size-threshold>
+	    </multipart-config>
+	</servlet>
+	
     <servlet>
         <servlet-name>mcnc</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
