--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<!-- <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         version="2.5">
+         version="2.5"> -->
+<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+  version="3.1">
 
     <display-name>MobileCNC Spring MVC</display-name>	
     <context-param>
@@ -21,7 +24,7 @@
 	        <max-request-size>20971520</max-request-size><!--20MB-->
 	        <file-size-threshold>0</file-size-threshold>
 	    </multipart-config>
-	</servlet>
+	</servlet>	
 	
     <servlet>
         <servlet-name>mcnc</servlet-name>
