bong seakleng help explain and re-configure root context xml(parent xml) and children xml, and configure application.property. We can't call application.property last time now it works, cause we have to call in child xml too. property-placeholder location of application.property

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -3,3 +3,6 @@ db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/faq
 db.username=postgres
 db.password=123
+
+
+img.directory = D:\resources\imgs
