--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/faq
 db.username=postgres
 db.password=123
+
+
+img.directory = D:\resources\imgs
