working on upload file

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -5,4 +5,5 @@ db.username=postgres
 db.password=123
 
 
-img.directory = D:\resources\imgs
+#img.directory = D:\resources\imgs
+img.directory = catalina.home
