--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ db.username=postgres
 db.password=123
 
 
-img.directory = D:\resources\imgs
+#img.directory = D:\resources\imgs
+img.directory = catalina.home
