success upload image to specific directory

--- a/bin/main/application.properties
+++ b/bin/main/application.properties
@@ -6,4 +6,5 @@ db.password=123
 
 
 #img.directory = D:\resources\imgs
-img.directory = catalina.home
+#img.directory = catalina.home
+img.directory = D:\\workspace\\SpringAssignment2\\src\\main\\webapp\\resources
